Исправления для прохождения валидации
Добавлены alt в img.
Исправлены id элементов (уникальные на странице).
Исправлен закрывающий тег </span>

--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -10,7 +10,7 @@
         <nav class="main-navigation">
           <ul>
             <li>
-              <a href="#"><img src="http://placehold.it/50x50"></a> <!-- Это должна быть ссылка на
+              <a href="#"><img src="http://placehold.it/50x50" alt="Barbershop"></a> <!-- Это должна быть ссылка на
                 главную страницу или просто картинка? -->
             </li>
             <li>
@@ -54,10 +54,10 @@
         </ul>
       </div>
       <div class="photos">
-        <img src="http://placehold.it/150x100" class="photo main">
-        <img src="http://placehold.it/150x100" class="photo mini">
-        <img src="http://placehold.it/150x100" class="photo mini">
-        <img src="http://placehold.it/150x100" class="photo mini">
+        <img src="http://placehold.it/150x100" alt="Фото 1" class="photo main">
+        <img src="http://placehold.it/150x100" alt="Фото 2" class="photo mini">
+        <img src="http://placehold.it/150x100" alt="Фото 3" class="photo mini">
+        <img src="http://placehold.it/150x100" alt="Фото 4" class="photo mini">
       </div>
       <div class="description">
         <p>Есть в наличии</p>
@@ -75,7 +75,7 @@
         </div>
         <a href="#">Купить</a><br><!-- Не очень понятно, ссылка или кнопка.
           Что должно происходить при нажатии? -->
-        <span>В набор входят:<span>
+        <span>В набор входят:</span>
         <ul>
           <li>
             Средство для умывания (50 мл)
