--- a/barbershop-shop.html
+++ b/barbershop-shop.html
@@ -10,7 +10,7 @@
         <nav class="main-navigation">
           <ul>
             <li>
-              <a href="#"><img src="http://placehold.it/50x50"></a> <!-- Это должна быть ссылка на
+              <a href="#"><img src="http://placehold.it/50x50" alt="Barbershop"></a> <!-- Это должна быть ссылка на
                 главную страницу или просто картинка? -->
             </li>
             <li>
@@ -52,47 +52,43 @@
       </div>
       <div class="catalog-content"><!-- Не очень понимаю, нужен ли этот div -->
         <div class="catalog-content-left">
-          <form action="#"method="get">
+          <form action="#" method="get">
             <span>Производители:</span><br>
             <input type="checkbox" id="maker-1">
             <label for="maker-1">
               Baxter of California
             </label><br>
-            <input type="checkbox" id="maker-1">
+            <input type="checkbox" id="maker-2">
             <label for="maker-2">
               Mr Natty
             </label><br>
-            <input type="checkbox" id="maker-2">
+            <input type="checkbox" id="maker-3">
             <label for="maker-3">
               Suavecito
             </label><br>
-            <input type="checkbox" id="maker-3">
+            <input type="checkbox" id="maker-4">
             <label for="maker-4">
               Malin+Goetz
             </label><br>
-            <input type="checkbox" id="maker-4">
+            <input type="checkbox" id="maker-5">
             <label for="maker-5">
               Murray's
             </label><br>
-            <input type="checkbox" id="maker-5">
-            <label for="maker-6">
-              American crew
-            </label><br>
             <input type="checkbox" id="maker-6">
             <label for="maker-6">
-              Baxter of California
+              American crew
             </label><br>
             <span>Группы товаров:</span><br>
             <input type="radio" name="product-groups" value="shaving" id="group-1" checked>
             <label for="group-1">
               Бритвенные принадлежности
             </label><br>
-            <input type="radio" name="product-groups" value="care" id="group-1" checked>
-            <label for="group-1">
+            <input type="radio" name="product-groups" value="care" id="group-2" checked>
+            <label for="group-2">
               Средства для ухода
             </label><br>
-            <input type="radio" name="product-groups" value="accessories" id="group-1" checked>
-            <label for="group-1">
+            <input type="radio" name="product-groups" value="accessories" id="group-3" checked>
+            <label for="group-3">
               Аксессуары
             </label><br>
             <a href="#">Показать</a><!-- Не очень понятно, нужна ссылка или кнопка
@@ -101,7 +97,7 @@
         </div>
         <div class="catalog-content-right">
           <div class="item">
-            <img src="http://placehold.it/150x100"><!-- Дальше абзац новый или просто
+            <img src="http://placehold.it/150x100" alt="Набор для путешествий"><!-- Дальше абзац новый или просто
               с новой строки? Или как отделить следующую часть? -->
             Набор для путешествий<br>
             &laquo;BAXTER OF CALIFORNIA&raquo;
@@ -112,7 +108,7 @@
               Что должно происходить при нажатии? -->
           </div>
           <div class="item">
-            <img src="http://placehold.it/150x100">
+            <img src="http://placehold.it/150x100" alt="Увлажняющий кондиционер">
             Увлажняющий кондиционер<br>
             &laquo;BAXTER OF CALIFORNIA&raquo;
             <div class="price">
@@ -121,7 +117,7 @@
             <a href="#">Купить</a>
           </div>
           <div class="item">
-            <img src="http://placehold.it/150x100">
+            <img src="http://placehold.it/150x100" alt="Гель для волос">
             Гель для волос<br>
             &laquo;SUAVECITO&raquo;
             <div class="price">
@@ -130,7 +126,7 @@
             <a href="#">Купить</a>
           </div>
           <div class="item">
-            <img src="http://placehold.it/150x100">
+            <img src="http://placehold.it/150x100" alt="Глина для укладки волос">
             Глина для укладки волос<br>
             &laquo;AMERICAN CREW&raquo;
             <div class="price">
@@ -139,7 +135,7 @@
             <a href="#">Купить</a>
           </div>
           <div class="item">
-            <img src="http://placehold.it/150x100">
+            <img src="http://placehold.it/150x100" alt="Гель для волос">
             Гель для волос<br>
             &laquo;AMERICAN CREW&raquo;
             <div class="price">
@@ -148,7 +144,7 @@
             <a href="#">Купить</a>
           </div>
           <div class="item">
-            <img src="http://placehold.it/150x100">
+            <img src="http://placehold.it/150x100" alt="Набор для бритья">
             Набор для бритья<br>
             &laquo;BAXTER OF CALIFORNIA&raquo;
             <div class="price">
