--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -8,11 +8,10 @@
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
+          <a href="#" class="logo">
+            <img src="http://placehold.it/50x50" alt="Barbershop" width="50" height="50">
+          </a>
           <ul>
-            <li>
-              <a href="#"><img src="http://placehold.it/50x50" alt="Barbershop"></a> <!-- Это должна быть ссылка на
-                главную страницу или просто картинка? -->
-            </li>
             <li>
               <a href="#">Информация</a>
             </li>
@@ -22,7 +21,7 @@
             <li>
               <a href="#">Прайс-лист</a>
             </li>
-            <li>
+            <li class="active">
               <a href="#">Магазин</a>
             </li>
             <li>
@@ -40,59 +39,53 @@
       <div class="breadcrumbs">
         <ul>
           <li>
-            Главная
+            <a href="#">Главная</a>
           </li>
           <li>
-            Магазин
+            <a href="#">Магазин</a>
           </li>
           <li>
-            Средства для ухода
+            <a href="#">Средства для ухода</a>
           </li>
           <li>
             Набор для путешествий &laquo;BAXTER OF CALIFORNIA&raquo;
           </li>
         </ul>
       </div>
-      <div class="photos">
-        <img src="http://placehold.it/150x100" alt="Фото 1" class="photo main">
-        <img src="http://placehold.it/150x100" alt="Фото 2" class="photo mini">
-        <img src="http://placehold.it/150x100" alt="Фото 3" class="photo mini">
-        <img src="http://placehold.it/150x100" alt="Фото 4" class="photo mini">
-      </div>
-      <div class="description">
-        <p>Есть в наличии</p>
-        <p>Артикул: DEXTER-AE</p><!-- Не совсем понятно, какой должен быть тег
-          и как это вообще реализовано -->
-        <p>
-          TRAVEL KIT - Необходимы аксесуар во время любого путешествия.
-          В аккуратной кожанной сумке находится все, что нужно для бритья
-          и ухода за кожей во время рабочей поездки или отдыха: средство
-          для умывания, увлажшяющий крем, крем для бритья, крем после бритья,
-          шампунь. Набор также может стать отличным подарком.
-        </p>
-        <div class="price">
-          2 900 руб.
+      <div class="content">
+        <div class="photos">
+          <img src="http://placehold.it/150x150" alt="Фото 1" width="150" height="150" class="photo">
+          <div class="phptos-mini">
+            <img src="http://placehold.it/50x50" alt="Фото 2" width="50" height="50" class="photo mini">
+            <img src="http://placehold.it/50x50" alt="Фото 3" width="50" height="50" class="photo mini">
+            <img src="http://placehold.it/50x50" alt="Фото 4" width="50" height="50" class="photo mini">
+          </div>
         </div>
-        <a href="#">Купить</a><br><!-- Не очень понятно, ссылка или кнопка.
-          Что должно происходить при нажатии? -->
-        <span>В набор входят:</span>
-        <ul>
-          <li>
-            Средство для умывания (50 мл)
-          </li>
-          <li>
-            Увлажняющий крем (50 мл)
-          </li>
-          <li>
-            Крем для бритья (50 мл)
-          </li>
-          <li>
-            Крем после бритья (50 мл)
-          </li>
-          <li>
-            Удобная кожанная косметичка
-          </li>
-        </ul>
+        <div class="description">
+          <div class="availability">
+            <p class="left">Есть в наличии</p>
+            <p class="right">Артикул: DEXTER-AE</p>
+          </div>
+          <p>
+            TRAVEL KIT - Необходимый аксессуар во время любого путешествия.
+            В аккуратной кожаной сумке находится все, что нужно для бритья
+            и ухода за кожей во время рабочей поездки или отдыха: средство
+            для умывания, увлажняющий крем, крем для бритья, крем после бритья,
+            шампунь. Набор также может стать отличным подарком.
+          </p>
+          <div class="buy">
+            <div class="price">2 900 руб.</div>
+            <a href="#" class="btn">Купить</a>
+          </div>
+          <h2>В набор входят:</h2>
+          <ul class="set">
+            <li>Средство для умывания (50 мл)</li>
+            <li>Увлажняющий крем (50 мл)</li>
+            <li>Крем для бритья (50 мл)</li>
+            <li>Крем после бритья (50 мл)</li>
+            <li>Удобная кожаная косметичка</li>
+          </ul>
+        </div>
       </div>
     </main>
     <footer class="main-footer">
