Проставлены классы кнопок и объединены классы .filters и .product-groups

--- a/barbershop-shop.html
+++ b/barbershop-shop.html
@@ -92,7 +92,7 @@
               </li>
             </ul>
             <h2>Группы товаров:</h2>
-            <ul class="product-groups">
+            <ul class="filter">
               <li>
                 <input type="radio" name="product-groups" value="shaving" id="group-1" checked>
                 <label for="group-1">
@@ -112,7 +112,7 @@
                 </label>
               </li>
             </ul>
-            <input type="submit" value="Показать">
+            <input type="submit" value="Показать" class="btn view">
           </form>
         </div>
         <div class="catalog-content-right">
@@ -124,7 +124,7 @@
             <p>
             <div class="buy">
               <div class="price">2 900 руб.</div>
-              <a href="#">Купить</a>
+              <a href="#" class="btn">Купить</a>
             </div>
           </div>
           <div class="item">
@@ -135,7 +135,7 @@
             </p>
             <div class="buy">
               <div class="price">750 руб.</div>
-              <a href="#">Купить</a>
+              <a href="#" class="btn">Купить</a>
             </div>
           </div>
           <div class="item">
@@ -146,7 +146,7 @@
             </p>
             <div class="buy">
               <div class="price">290 руб.</div>
-              <a href="#">Купить</a>
+              <a href="#" class="btn">Купить</a>
             </div>
           </div>
           <div class="item">
@@ -157,7 +157,7 @@
             </p>
             <div class="buy">
               <div class="price">500 руб.</div>
-              <a href="#">Купить</a>
+              <a href="#" class="btn">Купить</a>
             </div>
           </div>
           <div class="item">
@@ -168,7 +168,7 @@
             </p>
             <div class="buy">
               <div class="price">300 руб.</div>
-              <a href="#">Купить</a>
+              <a href="#" class="btn">Купить</a>
             </div>
           </div>
           <div class="item">
@@ -179,7 +179,7 @@
             </p>
             <div class="buy">
               <div class="price">3 900 руб.</div>
-              <a href="#">Купить</a>
+              <a href="#" class="btn">Купить</a>
             </div>
           </div>
         </div>
