--- a/barbershop-shop.html
+++ b/barbershop-shop.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container">
         <a href="#" class="logo">
-          <img src="http://placehold.it/50x50" alt="Barbershop" width="50" height="50">
+          <img src="img/logo.png" alt="Barbershop" width="111" height="24">
         </a>
         <nav class="main-navigation">
           <ul>
@@ -117,7 +118,7 @@
         </div>
         <div class="catalog-content-right">
           <div class="item">
-            <img src="http://placehold.it/150x100" alt="Набор для путешествий" width="50" height="50">
+            <img src="img/product-1.jpg" alt="Набор для путешествий" width="220" height="165">
             <p>
               Набор для путешествий<br>
               &laquo;BAXTER OF CALIFORNIA&raquo;
@@ -128,7 +129,7 @@
             </div>
           </div>
           <div class="item">
-            <img src="http://placehold.it/150x100" alt="Увлажняющий кондиционер" width="50" height="50">
+            <img src="img/product-2.jpg" alt="Увлажняющий кондиционер" width="220" height="165">
             <p>
               Увлажняющий кондиционер<br>
               &laquo;BAXTER OF CALIFORNIA&raquo;
@@ -139,7 +140,7 @@
             </div>
           </div>
           <div class="item">
-            <img src="http://placehold.it/150x100" alt="Гель для волос" width="50" height="50">
+            <img src="img/product-3.jpg" alt="Гель для волос" width="220" height="165">
             <p>
               Гель для волос<br>
               &laquo;SUAVECITO&raquo;
@@ -150,7 +151,7 @@
             </div>
           </div>
           <div class="item">
-            <img src="http://placehold.it/150x100" alt="Глина для укладки волос" width="50" height="50">
+            <img src="img/product-4.jpg" alt="Глина для укладки волос" width="220" height="165">
             <p>
               Глина для укладки волос<br>
               &laquo;AMERICAN CREW&raquo;
@@ -161,7 +162,7 @@
             </div>
           </div>
           <div class="item">
-            <img src="http://placehold.it/150x100" alt="Гель для волос" width="50" height="50">
+            <img src="img/product-5.jpg" alt="Гель для волос" width="220" height="165">
             <p>
               Гель для волос<br>
               &laquo;AMERICAN CREW&raquo;
@@ -172,7 +173,7 @@
             </div>
           </div>
           <div class="item">
-            <img src="http://placehold.it/150x100" alt="Набор для бритья" width="50" height="50">
+            <img src="img/product-6.jpg" alt="Набор для бритья" width="220" height="165">
             <p>
               Набор для бритья<br>
               &laquo;BAXTER OF CALIFORNIA&raquo;
