--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Набор для путешествий</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container">
         <a href="#" class="logo">
-          <img src="http://placehold.it/50x50" alt="Barbershop" width="50" height="50">
+          <img src="img/logo.png" alt="Barbershop" width="111" height="24">
         </a>
         <nav class="main-navigation">
           <ul>
@@ -54,11 +55,11 @@
       </div>
       <div class="content">
         <div class="photos">
-          <img src="http://placehold.it/150x150" alt="Фото 1" width="150" height="150" class="photo">
+          <img src="img/photo-big.jpg" alt="Большое фото" width="486" height="524" class="photo">
           <div class="phptos-mini">
-            <img src="http://placehold.it/50x50" alt="Фото 2" width="50" height="50" class="photo mini">
-            <img src="http://placehold.it/50x50" alt="Фото 3" width="50" height="50" class="photo mini">
-            <img src="http://placehold.it/50x50" alt="Фото 4" width="50" height="50" class="photo mini">
+            <img src="img/photo-mini-1.jpg" alt="Фото 1" width="140" height="149" class="photo mini">
+            <img src="img/photo-mini-2.jpg" alt="Фото 2" width="140" height="149" class="photo mini">
+            <img src="img/photo-mini-3.jpg" alt="Фото 3" width="140" height="149" class="photo mini">
           </div>
         </div>
         <div class="description">
