Мелкие правки по сетке

--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -56,38 +56,38 @@
       <div class="content clearfix">
         <div class="photos">
           <img src="img/photo-big.jpg" alt="Большое фото" width="460" height="498" class="photo">
-          <div class="phptos-mini">
+          <div class="phptos-mini clearfix">
             <img src="img/photo-mini-1.jpg" alt="Фото 1" width="140" height="149" class="photo mini">
             <img src="img/photo-mini-2.jpg" alt="Фото 2" width="140" height="149" class="photo mini">
             <img src="img/photo-mini-3.jpg" alt="Фото 3" width="140" height="149" class="photo mini">
           </div>
         </div>
         <div class="description">
-          <div class="availability clearfix">
-            <p class="left">Есть в наличии</p>
-            <p class="right">Артикул: DEXTER-AE</p>
+          <div class="product-info"
+            <div class="availability clearfix">
+              <p class="left">Есть в наличии</p>
+              <p class="right">Артикул: DEXTER-AE</p>
+            </div>
+            <p>
+              TRAVEL KIT - Необходимый аксессуар во время любого путешествия.
+              В аккуратной кожаной сумке находится все, что нужно для бритья
+              и ухода за кожей во время рабочей поездки или отдыха: средство
+              для умывания, увлажняющий крем, крем для бритья, крем после бритья,
+              шампунь. Набор также может стать отличным подарком.
+            </p>
+            <div class="buy clearfix">
+              <div class="price">2 900 руб.</div>
+              <a href="#" class="btn">Купить</a>
+            </div>
           </div>
-          <p>
-            TRAVEL KIT - Необходимый аксессуар во время любого путешествия.
-            В аккуратной кожаной сумке находится все, что нужно для бритья
-            и ухода за кожей во время рабочей поездки или отдыха: средство
-            для умывания, увлажняющий крем, крем для бритья, крем после бритья,
-            шампунь. Набор также может стать отличным подарком.
-          </p>
-          <div class="buy clearfix">
-            <div class="price">2 900 руб.</div>
-            <a href="#" class="btn">Купить</a>
-          </div>
-          <div class="composition">
-            <h2 class="mini-title">В набор входят:</h2>
-            <ul class="set">
-              <li>Средство для умывания (50 мл)</li>
-              <li>Увлажняющий крем (50 мл)</li>
-              <li>Крем для бритья (50 мл)</li>
-              <li>Крем после бритья (50 мл)</li>
-              <li>Удобная кожаная косметичка</li>
-            </ul>
-          </div>
+          <h2 class="mini-title">В набор входят:</h2>
+          <ul class="set">
+            <li>Средство для умывания (50 мл)</li>
+            <li>Увлажняющий крем (50 мл)</li>
+            <li>Крем для бритья (50 мл)</li>
+            <li>Крем после бритья (50 мл)</li>
+            <li>Удобная кожаная косметичка</li>
+          </ul>
         </div>
       </div>
     </main>
