--- a/barbershop-shop.html
+++ b/barbershop-shop.html
@@ -121,9 +121,11 @@
             <div class="item">
               <img src="img/product-1.jpg" alt="Набор для путешествий" width="220" height="165">
               <p>
-                Набор для путешествий<br>
-                &laquo;BAXTER OF CALIFORNIA&raquo;
-              <p>
+                <a href="#">
+                  Набор для путешествий<br>
+                  &laquo;BAXTER OF CALIFORNIA&raquo;
+                </a>
+              </p>
               <div class="buy clearfix">
                 <div class="price">2 900 руб.</div>
                 <a href="#" class="btn">Купить</a>
@@ -132,8 +134,10 @@
             <div class="item">
               <img src="img/product-2.jpg" alt="Увлажняющий кондиционер" width="220" height="165">
               <p>
-                Увлажняющий кондиционер<br>
-                &laquo;BAXTER OF CALIFORNIA&raquo;
+                <a href="#">
+                  Увлажняющий кондиционер<br>
+                  &laquo;BAXTER OF CALIFORNIA&raquo;
+                </a>
               </p>
               <div class="buy clearfix">
                 <div class="price">750 руб.</div>
@@ -143,8 +147,10 @@
             <div class="item">
               <img src="img/product-3.jpg" alt="Гель для волос" width="220" height="165">
               <p>
-                Гель для волос<br>
-                &laquo;SUAVECITO&raquo;
+                <a href="#">
+                  Гель для волос<br>
+                  &laquo;SUAVECITO&raquo;
+                </a>
               </p>
               <div class="buy clearfix">
                 <div class="price">290 руб.</div>
@@ -154,8 +160,10 @@
             <div class="item">
               <img src="img/product-4.jpg" alt="Глина для укладки волос" width="220" height="165">
               <p>
-                Глина для укладки волос<br>
-                &laquo;AMERICAN CREW&raquo;
+                <a href="#">
+                  Глина для укладки волос<br>
+                  &laquo;AMERICAN CREW&raquo;
+                </a>
               </p>
               <div class="buy clearfix">
                 <div class="price">500 руб.</div>
@@ -165,8 +173,10 @@
             <div class="item">
               <img src="img/product-5.jpg" alt="Гель для волос" width="220" height="165">
               <p>
-                Гель для волос<br>
-                &laquo;AMERICAN CREW&raquo;
+                <a href="#">
+                  Гель для волос<br>
+                  &laquo;AMERICAN CREW&raquo;
+                </a>
               </p>
               <div class="buy clearfix">
                 <div class="price">300 руб.</div>
@@ -176,8 +186,10 @@
             <div class="item">
               <img src="img/product-6.jpg" alt="Набор для бритья" width="220" height="165">
               <p>
-                Набор для бритья<br>
-                &laquo;BAXTER OF CALIFORNIA&raquo;
+                <a href="#">
+                  Набор для бритья<br>
+                  &laquo;BAXTER OF CALIFORNIA&raquo;
+                </a>
               </p>
               <div class="buy clearfix">
                 <div class="price">3 900 руб.</div>
