--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="description">
-          <div class="product-info"
+          <div class="product-info">
             <div class="availability clearfix">
               <p class="left">Есть в наличии</p>
               <p class="right">Артикул: DEXTER-AE</p>
