--- a/barbershop-shop.html
+++ b/barbershop-shop.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <nav class="main-navigation">
           <ul>
             <li>
@@ -25,7 +25,7 @@
               <a href="#">Прайс-лист</a>
             </li>
             <li class="active">
-              Магазин
+              <a href="#">Магазин</a>
             </li>
             <li>
               <a href="#">Контакты</a>
@@ -121,7 +121,7 @@
             <div class="item">
               <img src="img/product-1.jpg" alt="Набор для путешествий" width="220" height="165">
               <p>
-                <a href="#">
+                <a href="#" class="product-name">
                   Набор для путешествий<br>
                   &laquo;BAXTER OF CALIFORNIA&raquo;
                 </a>
@@ -134,7 +134,7 @@
             <div class="item">
               <img src="img/product-2.jpg" alt="Увлажняющий кондиционер" width="220" height="165">
               <p>
-                <a href="#">
+                <a href="#" class="product-name">
                   Увлажняющий кондиционер<br>
                   &laquo;BAXTER OF CALIFORNIA&raquo;
                 </a>
@@ -147,7 +147,7 @@
             <div class="item">
               <img src="img/product-3.jpg" alt="Гель для волос" width="220" height="165">
               <p>
-                <a href="#">
+                <a href="#" class="product-name">
                   Гель для волос<br>
                   &laquo;SUAVECITO&raquo;
                 </a>
@@ -160,7 +160,7 @@
             <div class="item">
               <img src="img/product-4.jpg" alt="Глина для укладки волос" width="220" height="165">
               <p>
-                <a href="#">
+                <a href="#" class="product-name">
                   Глина для укладки волос<br>
                   &laquo;AMERICAN CREW&raquo;
                 </a>
@@ -173,7 +173,7 @@
             <div class="item">
               <img src="img/product-5.jpg" alt="Гель для волос" width="220" height="165">
               <p>
-                <a href="#">
+                <a href="#" class="product-name">
                   Гель для волос<br>
                   &laquo;AMERICAN CREW&raquo;
                 </a>
@@ -186,7 +186,7 @@
             <div class="item">
               <img src="img/product-6.jpg" alt="Набор для бритья" width="220" height="165">
               <p>
-                <a href="#">
+                <a href="#" class="product-name">
                   Набор для бритья<br>
                   &laquo;BAXTER OF CALIFORNIA&raquo;
                 </a>
