Готовая верстка страниц
Без попапов.

--- a/barbershop-shop.html
+++ b/barbershop-shop.html
@@ -5,7 +5,7 @@
     <title>Каталог</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="second-page">
     <header class="main-header">
       <div class="container clearfix">
         <nav class="main-navigation">
@@ -198,11 +198,11 @@
             </div>
           </div>
           <ul class="pages clearfix">
-            <li class="page active-page">
-              1
-            </li>
             <li class="page">
-              <a href="#">2</a>
+              <a href="#">1</a>
+            </li>
+            <li class="page active-page">
+              2
             </li>
             <li class="page">
               <a href="#">3</a>
