--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -5,9 +5,9 @@
     <title>Набор для путешествий</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="second-page">
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <nav class="main-navigation">
           <ul>
             <li>
@@ -85,7 +85,7 @@
             <li>Средство для умывания (50 мл)</li>
             <li>Увлажняющий крем (50 мл)</li>
             <li>Крем для бритья (50 мл)</li>
-            <li>Крем после бритья (50 мл)</li>
+            <li>Крем после бритья, шампунь (50 мл)</li>
             <li>Удобная кожаная косметичка</li>
           </ul>
         </div>
