--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="modal-content">
       <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
       <h2 class="modal-content-title">Личный кабинет</h2>
-      <p>Введите свой логин и пароль.</p>
+      <p>Введите, пожалуйста, свой логин и пароль.</p>
       <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
         <input class="icon-user" type="text" name="login" placeholder="Логин">
         <input class="icon-password" type="password"  name="password" placeholder="Пароль">
